<resources>
    <string name="app_name">Satgaspol</string>
    <string name="nama_pemilik_barang">Nama Pemilik Barang</string>
    <string name="placeholder_name">Nama User</string>
    <string name="welcome">Welcome,</string>
    <string name="ramadhan_service_hours">Ramadhan Service Hours</string>
    <string name="operational_time">09:00 &#8211; 16:30 WIB</string>
    <string name="sisa_barang">Sisa Barang</string>
    <string name="placeholder_item_count">200</string>
    <string name="paket">Paket</string>
    <string name="diambil">Diambil</string>
    <string name="tersedia">Tersedia</string>
    <string name="total">Total</string>
    <string name="cari_paket">Cari Paket</string>
    <string name="bantuan">Bantuan</string>
    <string name="data_paket_rt">Data Paket RT</string>
    <string name="placeholder_rt">RT 07</string>
    <string name="placeholder_tanggal">30 April 2020</string>
    <string name="paket_saya">Paket Saya</string>
    <string name="lainnya">Lainnya</string>
    <string name="beranda">Beranda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anda_tidak_memiliki_paket_saat_ini">Anda tidak memiliki paket saat ini!</string>
    <string name="placeholder_ekspedisi">JNE</string>
    <string name="menu_title">Menu Title</string>
    <string name="placeholder_menu_content">Bahasa</string>
    <string name="content_menu_desc">Icon Content Menu</string>
    <string name="open">OPEN</string>
    <string name="closed">CLOSED</string>
    <string name="action_bar_title">Action Bar Title</string>
    <string name="nama">Nama</string>
    <string name="masukkan_nama_anda">Masukkan Nama Anda</string>
    <string name="placeholder_email_hint">Ex. john@example.com</string>
    <string name="e_mail">E-mail</string>
    <string name="no_telp">No. Telp</string>
    <string name="blok_rumah">Blok Rumah</string>
    <string name="placeholder_blok">Ex. D17/5</string>
    <string name="note_alamat">Jika anda memiliki lebih dari 1 (satu) blok rumah, pisahkan dengan tanda ; (titik koma)</string>
    <string name="simpan">Simpan</string>
</resources>
