<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/primary_bottom_grey">

        <Button
            android:id="@+id/bProfileSave"
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/simpan"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/ruler"
            android:background="@drawable/rounded_primary" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bProfileSave"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp"
            android:src="@drawable/profile"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvProfileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/profile_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/nama"
        android:fontFamily="@font/ruler"/>

    <EditText
        android:id="@+id/etProfileName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProfileName"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:inputType="text"
        android:background="@drawable/rounded_white"
        android:hint="@string/masukkan_nama_anda" />

    <TextView
        android:id="@+id/tvProfilePhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etProfileName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/no_telp"
        android:fontFamily="@font/ruler"/>

    <EditText
        android:id="@+id/etProfilePhone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProfilePhone"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:inputType="phone"
        android:background="@drawable/rounded_white"
        android:hint="@string/placeholder_email_hint"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/tvProfileAlamat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etProfilePhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/blok_rumah"
        android:fontFamily="@font/ruler"/>

    <EditText
        android:id="@+id/etProfileAlamat"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProfileAlamat"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:inputType="phone"
        android:background="@drawable/rounded_white"
        android:hint="@string/placeholder_blok"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/tvNoteAlamat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etProfileAlamat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:text="@string/note_alamat"
        android:fontFamily="@font/ruler"/>

</androidx.constraintlayout.widget.ConstraintLayout>