<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".paket.PackageFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_my_package"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    android:text="@string/paket_saya"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:fontFamily="@font/ruler" />



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/title_my_package"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="100dp"
                    android:background="@color/white"
                    />

                <!--        START ITEM      -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/barang_layout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:padding="10dp"
                    android:background="@drawable/rounded_white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_my_package">

                    <TextView
                        android:id="@+id/item_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:layout_constraintHorizontal_bias="0.0"
                        android:text="@string/sisa_barang"
                        android:textSize="13sp"
                        android:textStyle="normal"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/ruler" />

                    <ProgressBar
                        android:id="@+id/item_progress"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/item_title"
                        android:layout_marginTop="5dp"
                        android:max="100"
                        android:progress="81"
                        android:progressDrawable="@drawable/progress_bar_color"
                        style="@android:style/Widget.ProgressBar.Horizontal" />

                    <LinearLayout
                        android:id="@+id/item_status_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/item_progress"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        android:baselineAligned="false">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/picked_layout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/title_item_picked"
                                android:layout_width="0dp"
                                android:layout_height="25dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_margin="5dp"
                                android:textSize="15sp"
                                android:text="@string/diambil"
                                android:textColor="@color/black"
                                android:fontFamily="@font/ruler"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/text_item_picked"
                                android:layout_width="0dp"
                                android:layout_height="25dp"
                                app:layout_constraintTop_toBottomOf="@+id/title_item_picked"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_margin="5dp"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:text="@string/placeholder_item_count"
                                android:textColor="@color/black"
                                android:fontFamily="@font/ruler"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/text_item_picked_type"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toBottomOf="@+id/text_item_picked"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:textSize="12sp"
                                android:text="@string/paket"
                                android:fontFamily="@font/ruler"
                                android:textAlignment="center" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/unpicked_layout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/white_left_right_grey">

                            <TextView
                                android:id="@+id/title_item_unpicked"
                                android:layout_width="0dp"
                                android:layout_height="25dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_margin="5dp"
                                android:textSize="15sp"
                                android:text="@string/tersedia"
                                android:textColor="@color/black"
                                android:fontFamily="@font/ruler"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/text_item_unpicked"
                                android:layout_width="0dp"
                                android:layout_height="25dp"
                                app:layout_constraintTop_toBottomOf="@+id/title_item_unpicked"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_margin="5dp"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:text="@string/placeholder_item_count"
                                android:textColor="@color/black"
                                android:fontFamily="@font/ruler"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/text_item_unpicked_type"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toBottomOf="@+id/text_item_unpicked"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:textSize="12sp"
                                android:text="@string/paket"
                                android:fontFamily="@font/ruler"
                                android:textAlignment="center" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/total_layout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/title_item_total"
                                android:layout_width="0dp"
                                android:layout_height="25dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_margin="5dp"
                                android:textSize="15sp"
                                android:text="@string/total"
                                android:textColor="@color/black"
                                android:fontFamily="@font/ruler"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/text_item_total"
                                android:layout_width="0dp"
                                android:layout_height="25dp"
                                app:layout_constraintTop_toBottomOf="@+id/title_item_total"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_margin="5dp"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:text="@string/placeholder_item_count"
                                android:textColor="@color/black"
                                android:fontFamily="@font/ruler"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/text_item_total_type"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toBottomOf="@+id/text_item_total"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:textSize="12sp"
                                android:text="@string/paket"
                                android:fontFamily="@font/ruler"
                                android:textAlignment="center" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
                <!--        END ITEM        -->

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarPackage"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" >


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_status_paket"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/anda_tidak_memiliki_paket_saat_ini"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/ruler"
                android:textAlignment="center"
                android:layout_margin="20dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerPackage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="20dp"
                android:paddingBottom="50dp"
                android:clipToPadding="false">


            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>